third_party/move/move-compiler-v2/tests/checking/abilities/missing_key.exp

Diagnostics:
error: type `Impotent` does not have expected ability `key`
   ┌─ tests/checking/abilities/missing_key.move:16:9
   │
16 │         borrow_global_mut<Impotent>(addr);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `Impotent` does not have expected ability `key`
   ┌─ tests/checking/abilities/missing_key.move:17:9
   │
17 │         borrow_global<Impotent>(addr);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `Impotent` does not have expected ability `key`
   ┌─ tests/checking/abilities/missing_key.move:18:9
   │
18 │         exists<Impotent>(addr);
   │         ^^^^^^^^^^^^^^^^^^^^^^

error: type `Impotent` does not have expected ability `key`
   ┌─ tests/checking/abilities/missing_key.move:22:25
   │
22 │         move_to(signer, Impotent {})
   │                         ^^^^^^^^^^^
